<resources>
    <string name="app_name">GudhangApp</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_confirm">Confirm Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_to_register">Dont have an account ? Signup.</string>
    <string name="btn_to_login">Already have an account ? Login.</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
</resources>
