<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height = "fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg_login"
    android:padding= "10dp">

    <TextView
        android:text = "@string/btn_register"
        android:textColor="@color/white"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview"
        android:textSize = "35sp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:orientation="vertical">

        <EditText
            android:id = "@+id/name"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_marginBottom="10dp"
            android:hint = "@string/hint_name"
            android:background="@color/white"
            android:singleLine="true"
            android:padding="10dp"
            android:textColorHighlight="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>
        <EditText
            android:id = "@+id/username"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:hint = "@string/hint_username"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/input_login_hint"
            android:textColorHighlight="@color/input_login"/>
        <EditText
            android:id = "@+id/email"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:hint = "@string/hint_email"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/input_login_hint"
            android:textColorHighlight="@color/input_login"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:id="@+id/password"
            android:textColorHighlight="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:hint="@string/hint_password" />
        <EditText
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/confirm"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:hint = "@string/hint_confirm"
            android:textColorHint="@color/input_login_hint"
            android:textColorHighlight="@color/input_login"/>

        <Button
            android:id="@+id/SignupButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:textColor="@color/btn_login"
            android:background="@color/btn_login_bg"
            android:layout_marginTop="20dp"
            android:onClick="signup"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/btn_to_login"
            android:id="@+id/openLoginButton"
            android:onClick="openLogin"/>

    </LinearLayout>


</LinearLayout>
