<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height = "fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg_login"
    android:padding= "10dp">
    <TextView
        android:text = "Login"
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview"
        android:textSize = "35sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id = "@+id/name"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint = "@string/hint_username"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHighlight = "@color/input_login"
            android:textColorHint = "@color/input_login_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint = "@string/hint_password"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHighlight = "@color/input_login"
            android:textColorHint = "@color/input_login_hint" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login"
            android:background="@color/btn_login_bg"
            android:onClick="login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/btn_to_register"
            android:id="@+id/openSignupButton"
            android:onClick="openSignup"/>

    </LinearLayout>

</LinearLayout>
